--- a/index.css
+++ b/index.css
@@ -169,3 +169,459 @@ body > section:nth-child(2) {
   font-size: 15px;
   font-weight: 700;
 }
+
+
+
+/* newLaunches styles -------------------- */
+.new{
+  width: 100%;
+}
+#newLaunches{
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+  margin-bottom: 40px;
+  align-items: center;
+}
+
+#content{
+  display: flex;
+  position: relative;
+}
+
+#content > img{
+  width: 480px;
+  border-radius: 30px 0 0 30px;
+}
+
+.details{
+  box-sizing: border-box;
+  position: relative;
+  color: #000;
+  background: #fff;
+  padding: 1% 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 0 30px 30px 0;
+}
+.details > img{
+  width: 5vw;
+  left: 0;
+  top: 3vw;
+  height: auto;
+  position: absolute;
+}
+
+#newLaunches > p{
+  font-size: 80px;
+  padding: 30px;
+  line-height: 60px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ff0000;
+  cursor: pointer;
+}
+
+.newTag{
+  position: absolute;
+  width: 3vw;
+  height: 15px;
+  padding: 2px;
+  top: 2vw;
+  left: 2vw;
+  z-index: 1;
+  color: #fff;
+  background: #ff0000;
+  font-size: 0.8vw;
+  letter-spacing: 0.5px;
+  text-align: center;
+}
+
+.details > h5:nth-child(2){
+  position: relative;
+  color: #9e9e9e;
+  font-weight: 700;
+}
+
+
+.details > h5:nth-child(2):before {
+  content: "";
+  position: absolute;
+  height: 1px;
+  background: #e00c1a;
+  bottom: -10px;
+  left: 50%;
+  width: 30%;
+  transform: translateX(-50%);
+}
+
+.details > h4{
+  font-size: 1.4rem;
+  margin: 1.6rem 0 1rem;
+  text-align: center;
+}
+
+.details > h4+h5{
+  background: #ff0000;
+  color: white;
+  font-size: 14px;
+  padding: 3px 10px;
+  font-weight: 600;
+  text-transform: capitalize;
+  margin-bottom: 8px;
+  line-height: normal;
+}
+
+.details > h2{
+  color: #ff0000;
+  font-weight: 600;
+  font-size: 22px;
+  text-align: center;
+}
+
+.details > h2+p{
+  position: relative;
+  background-color: #6f6f6f;
+  color: white;
+  padding: 0vw 1vw;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-size: 11px;
+  line-height: 17px;
+}
+
+.details > h2+p::before{
+    position: absolute;
+    content: "";
+    height: 10px;
+    width: 10px;
+    bottom: -5px;
+    left: 50%;
+    background: #545353;
+    transform: rotate(45deg);
+    margin-left: -5px;
+    
+}
+
+.details > p+p{
+  height: 4vw;
+  color: black;
+  font-size: 0.88vw;
+  line-height: 1.5;
+  text-align: justify;
+  min-height: 2.73vw;
+  width: 95%;
+  overflow: hidden;
+  font-weight: 500;
+  position: relative;
+  
+}
+.readmore{
+  position: absolute;
+  padding-left: 7px;
+  color: #ff0000;
+  font-weight: 600;
+  background-color: #fff;
+  bottom: 3%;
+  right: 0;
+  left: unset;
+  width: max-content;
+  cursor: pointer;
+}
+
+.details > div{
+  display: flex;
+  justify-content: space-evenly;
+  gap: 10px;
+}
+
+.details > div > button{
+  text-align: center;
+  background: #ff0000;
+  color: #fff;
+  border: 1px solid #ff0000;
+  font-weight: 600;
+  padding: 0 20px;
+  font-size: 12px;
+  text-transform: uppercase;
+  border-radius: 4px;
+  height: 45px;
+  cursor: pointer;
+}
+
+.details > div > button:first-child{
+  background-color: transparent;
+  color: #ff0000;
+  
+}
+
+.details > div > button:first-child:hover{
+  background-color: #ff0000;
+  color: #fff;
+}
+
+
+/* celeb styles =========== */
+
+.celeb {
+  width: 100%;
+}
+#celeb{
+  display: flex;
+  margin: 50px 0;
+}
+
+#celeb > img{
+  width: 40%;
+  border-radius: 10px;
+}
+
+#celeb_left, #celeb_right{
+  padding: 0;
+  margin: 0;
+}
+
+#celeb > .celeb_details{
+  box-sizing: border-box;
+  width: 40%;
+  margin: 100px auto;
+}
+
+.celeb_details > h2{
+  margin-top: 0;
+  font-weight: 700;
+  position: relative;
+  font-size: 30px;
+  line-height: 36px;
+}
+
+.celeb_details > h2 > span{
+  color: #ff0000;
+}
+
+.celeb_details > h2::after{
+    position: absolute;
+    left: 0;
+    content: '';
+    width: 20%;
+    background: #FF0000;
+    height: 2px;
+    top: 130%;
+}
+
+.celeb_details > h4{
+  font-size: 20px;
+  font-weight: 500;
+  margin: 30px 0 10px;
+  color: #ff0000;
+}
+
+.celeb_details > h3{
+  font-size: 25px;
+  font-weight: 700;
+  margin: 0px 0 30px;
+}
+
+.celeb_details > p{
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  padding: 0px 0 36px;
+}
+
+
+
+/* cart styles ======================= */
+
+
+
+/* footer big image==================== */
+#footer_img{
+  width: 100%;
+}
+
+/* press media style =============== */
+
+.press{
+  width: 100%;
+  margin: auto;
+  text-align: center;
+}
+.press > h2{
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 33px;
+  letter-spacing: -1px;
+  text-align: center;
+  margin: 50px;
+}
+.press > h4 {
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  text-align: center;
+  position: relative;
+  padding: 24px 24px 0;
+}
+
+.press > h4::before, .press > h4::after{
+  opacity: 0.4;
+  background: #ff0000;
+  content: "";
+  position: absolute;
+  width: 51px;
+  height: 36px;
+  -webkit-mask-image: url(https://cdn.shopify.com/s/files/1/0057/8938/4802/files/1_fc94f9ed-d21b-4d6f-ad4a-878126eaf7ab.png?v=1649074645);
+  mask-image: url(https://cdn.shopify.com/s/files/1/0057/8938/4802/files/1_fc94f9ed-d21b-4d6f-ad4a-878126eaf7ab.png?v=1649074645);
+  -webkit-mask-size: 51px 36px;
+  mask-size: 51px 36px;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+}
+
+.press > h4::before{
+  left: 200px;
+  top: -10px;
+}
+
+.press > h4::after{
+  right: 150px;
+  transform: rotate(180deg);
+}
+
+#mediaHouse{
+  box-sizing: border-box;
+  display: inline-grid;
+  grid-auto-flow: column;
+  align-items: center;
+  gap: 80px;
+  margin: 48px auto;
+  /* background-color: #fff; */
+}
+
+#mediaHouse > img{
+  box-sizing: border-box;
+  max-width: 160px;
+  cursor: pointer;
+  opacity: 0.3;
+  vertical-align: middle;
+  filter: grayscale(1);
+  transition: opacity 0.2s ease-in-out;
+}
+
+#mediaHouse > img:hover{
+  opacity: 1;
+  filter: grayscale(0);
+}
+
+/* brand promises ----------------  */
+
+
+.brand_promises > h1{
+  text-align: center;
+  margin: 40px;
+  font-size: 30px;
+  line-height: 33px;
+  font-weight: 700;
+}
+
+.brand{
+  display: flex;
+  gap: 70px;
+  justify-content: center;
+  align-items: center;
+  padding: 0 0 20px;
+
+  font-size: 15px;
+  line-height: 18px;
+}
+
+.brand > img{
+  max-height: 40px;
+}
+
+.brand-text{
+  width: 100%;
+  background-color: #2c2c2c;
+  margin-top: 40px;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
+}
+.brand-text > p{
+  font-size: 12px;
+  padding: 0 12%;
+  line-height: normal;
+  color: #8f8f8f;
+}
+
+/* what they say styles ================ */
+
+#what-say{
+  background-color: #dcdcdc;
+}
+
+#what-say > h2{
+  text-align: center;
+  color: #000;
+  font-size: 30px;
+  line-height: 33px;
+  font-weight: 700;
+
+  padding: 60px 0 40px;
+}
+
+.review-cards{
+  display: flex;
+  justify-content: space-evenly;
+  margin: auto;
+  gap: 2vw;
+  padding: 0 50px;
+  overflow-x: auto;
+}
+
+
+
+.review-card{
+  display: flex;
+  width: 33%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 80px auto 48px;
+  position: relative;
+  z-index: 10;
+  background-image: url(https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Group_846_27e83f1f-bf7e-4afd-9e60-0724e87321c4.png?v=1649422048);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 100% 100%;;
+}
+
+.review-card > img{
+  max-width: 75%;
+  padding: 16px 0 0;
+  /* z-index: -1; */
+}
+
+.review-card > p{
+  padding: 15px;
+  line-height: 23px;
+  min-height: 45px;
+
+}
+
+.review-card > button{
+  color: #ff0000;
+  font-size: 12px;
+  border: 1px solid #fff;
+  padding: 12px 35px;
+  line-height: 12px;
+  background: #fff;
+  font-weight: 700;
+  border-radius: 4px;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin: 20px auto 20px;
+}
