--- a/footer.css
+++ b/footer.css
@@ -1,11 +1,11 @@
-*{
+#footer{
     background-color:black;
     color:white;
     font-family: 'Anek Malayalam', sans-serif;
 font-family: 'Roboto', sans-serif;
 letter-spacing:1px;
 }
-h4,h5{
+#footer h4,#footer h5{
     font-family: 'Anek Malayalam', sans-serif;
 font-family: 'Roboto', sans-serif;
 letter-spacing:1px;
@@ -45,14 +45,14 @@ letter-spacing:1px;
   #first>div:nth-child(4)>p{
     cursor:pointer;
 }
-input{
+#footer input{
     border-color:none;
     margin: auto;
     border: 0ch;
     width:250px;
     padding:10px;
 }
-button{
+#footer button{
     font-size:medium;
     cursor: pointer;
     border-color:none;
@@ -92,27 +92,27 @@ button{
 }
  
 
-p{
+#footer p{
     color:#bdbdbd;
     font-size:13px;
    font-weight:bold;
    word-spacing:1px;
 }
-#card{
+#card_f{
     display:flex;
     /* border:1px solid red; */
     justify-content:space-around;
     margin-top:70px;
    
 }
-#card>div{
+#card_f>div{
     width:700px; 
     /* border:1px solid green;    */
 }
-#card>div:first-child{
+#card_f>div:first-child{
     width:500px;
 }
-#card>div:last-child{
+#card_f>div:last-child{
     width:600px;
     display:flex;
     
