--- a/navbar.css
+++ b/navbar.css
@@ -1,36 +1,27 @@
 
-* {
-    margin: 0px;
-    padding: 0px;
-}
-
 #navbar {
-    /* border: 1px solid red; */
     font-family: 'Montserrat', sans-serif;
     width: 100%;
     height: 70px;
     display: flex;
     justify-content: space-between;
     background-color: black;
-    /* position: sticky; */
     top: 0px;
     align-items: center;
 }
 
 #navbar>div:nth-child(1) {
-    /* border: 1px solid blue; */
     width: 10%;
     display: flex;
+    justify-content: flex-end;
 }
 
 #navbar>div:nth-child(1)>img {
     width: 90px;
-    margin-left: 50px;
 }
 
 
 #navbar>div:nth-child(2) {
-    /* border: 1px solid orange; */
     width: 25%;
     display: flex;
     justify-content: space-around;
@@ -43,24 +34,7 @@
     color: white;
     background-color: black;
     margin: auto;
-
-}
-
-#navbar>div:nth-child(2)>select {
-    background-color: black;
-    color: white;
-    padding: 10px;
-    border-width: 0px;
-    font-size: 18px;
-    /* font-weight: bold; */
-
-}
-
-#navbar>div:nth-child(2)>select:hover {
-    cursor: pointer;
-    -webkit-box-shadow: 0 9px 15px 0px red;
-    box-shadow: 0 9px 15px 0px red;
-    padding: 15px;
+    
 }
 
 #navbar>div:nth-child(2)>h4:hover {
@@ -74,33 +48,29 @@
 
 
 #navbar>div:nth-child(3) {
-    /* border: 1px solid red;  */
     width: 30%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    box-sizing: border-box;
 
 }
 
-/*         
-#navbar>div:nth-child(3)>p{
-    color: white;
-    text-align: center;
-    margin: auto;
-} */
 #navbar>div:nth-child(3)>img {
     width: 22px;
-    padding: 20px;
+    padding: 15px;
+    cursor: pointer;
 
 }
 
 #navbar>div:nth-child(3)>input {
-    /* border: 1px solid blue; */
     width: 70%;
-    /* display: block; */
     margin: auto;
     height: 40px;
     border-radius: 30px;
-    font-size: 17px
+    font-size: 17px;
+
+    cursor: pointer;
 }
 
 #search {
@@ -118,10 +88,6 @@
     height: 30px;
     width: 220px;
     border-radius: 20px;
-    margin-top: 15px;
-
-
-
 
 }
 
@@ -131,7 +97,7 @@
 }
 
 #searchImg>input {
-    border: transparent;
+    border: none;
     font-size: 15px;
 }
 
@@ -149,7 +115,7 @@
     width: 200px;
     position: absolute;
     background-color: black;
-    top: 80px;
+    top: 70px;
     right: 100px;
     display: flex;
     flex-direction: column;
@@ -171,6 +137,7 @@
     font-size: 18px;
     background-color: red;
     color: white;
+    cursor: pointer;
 }
 
 #showLogIn>div>h3 {
@@ -185,6 +152,8 @@
     background-color: black;
     color: white;
 }
+
+
 
 .dropbtn {
     background-color: black;
@@ -213,12 +182,13 @@
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     left: 0;
-    top: 67px;
+    top: 66px;
+    gap: 20px;
+    
 }
 
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+    max-width: 22%;
     text-decoration: none;
     display: block;
 }
@@ -234,7 +204,7 @@
 }
 
 .dropdown-content>a>img {
-    width: 300px;
+    width: 100%;
 }
 
 .dropdown-content {
